# nemo-gst-interfaces

./: Makefile.am  README  configure.ac  nemo-gstreamer-meta-1.0.pc.in
gst-libs/gst/: Makefile.am
gst-libs/gst/interfaces/: Makefile.am  nemoeglimagememory.c  nemoeglimagememory.h  nemovideotexture.c  nemovideotexture.h
gst-libs/gst/meta/: Makefile.am  nemometa.c  nemometa.h
rpm/: nemo-gst-interfaces.spec
