lib_LTLIBRARIES = libgstnemometa-@GST_MAJORMINOR@.la
libgstnemometaincludedir = \
        $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/meta

libgstnemometainclude_HEADERS = nemometa.h
libgstnemometa_@GST_MAJORMINOR@_la_SOURCES = nemometa.c
libgstnemometa_@GST_MAJORMINOR@_la_CFLAGS = $(GST_CFLAGS)
libgstnemometa_@GST_MAJORMINOR@_la_LIBADD = $(GST_LIBS)
libgstnemometa_@GST_MAJORMINOR@_la_LDFLAGS = $(GST_LIB_LDFLAGS) $(GST_LT_LDFLAGS)
